@@ -1,6 +1,7 @@
 == Changelog ==
 = 2.0.3 =
 Added: Added taxes settings to options export.
+Fixed: Resolved error occuring when running in CLI environment.
 
 = 2.0.2 =
 Fixed: Fixed wp-cli compatibility issue.
